set the correct z-index for the ck editor toolbar

--- a/frontend/src/global_styles/content/editor/_ckeditor.sass
+++ b/frontend/src/global_styles/content/editor/_ckeditor.sass
@@ -93,7 +93,7 @@ opce-ckeditor-augmented-textarea .op-ckeditor--attachments
   .document-editor__toolbar
     position: sticky
     top: 0
-    z-index: 2
+    z-index: var(--ck-z-panel)
 
     // Reset these styles explicitly when the editor is opened inside a Dialog, as position: sticky opens a separate stacking context.
     // In case the dialog has multiple editors below each other, these different context interfere and the paragraph dropdown of an editor will be behind the editor below it.
@@ -128,9 +128,6 @@ opce-ckeditor-augmented-textarea .op-ckeditor--attachments
 .ck-icon_inherit-color
   path
     fill: var(--body-font-color) !important
-
-.ck.ck-balloon-panel.ck-powered-by-balloon
-  z-index: var(--ck-z-default) !important
 
 @media (max-width: $breakpoint-sm)
   .ck-balloon-panel.ck-balloon-panel_visible
